--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         layout="@layout/toolbar_main" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txt_nome_usuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
@@ -37,8 +37,7 @@
         android:textColor="#61688b"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_nome_usuario" />
 
     <TextView
         android:id="@+id/textView3"
