--- a/app/src/main/res/layout/activity_linguagens_tradutores_modulo.xml
+++ b/app/src/main/res/layout/activity_linguagens_tradutores_modulo.xml
@@ -199,7 +199,7 @@
             app:layout_constraintTop_toBottomOf="@+id/txtViewP5Tradutores" />
 
         <Button
-            android:id="@+id/btn_quiz_texto"
+            android:id="@+id/btn_quiz_textoLinguagens"
             android:layout_width="387dp"
             android:layout_height="46dp"
             android:layout_marginTop="24dp"
